# metalins-python-sdk

./: LICENSE  README.md  pyproject.toml
docs/integrations/: anthropic.md  fastapi.md  langchain.md
metalins/: __init__.py  agent.py  client.py  errors.py  mcp_session.py  state.py  worker.py
metalins/integrations/: __init__.py  anthropic.py  fastapi.py  langchain.py
tests/: test_agent.py  test_anthropic.py  test_client.py  test_fastapi.py  test_mcp_session.py
