[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metalins"
version = "0.4.0"
description = "SDK for Metalins — identity verification for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Jose Hernandez", email = "josemiguelhernandez16@gmail.com"}]
keywords = ["ai", "agents", "identity", "verification", "metalins"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.3.0"]
# The FastAPI middleware is pure ASGI and imports nothing from FastAPI at
# runtime; this extra just pulls FastAPI in for convenience.
fastapi = ["fastapi>=0.110.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
    "langchain-core>=0.3.0",
    "starlette>=0.37.0",
]

[project.urls]
Homepage = "https://metalins.com"
Documentation = "https://docs.metalins.com"
Repository = "https://github.com/metalins/sdk-python"

[tool.hatch.build.targets.wheel]
packages = ["metalins"]
